<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="303dp"
        android:layout_height="85dp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="ScientificCalc"
        android:text="Scientific Calculator➡️"
        android:textColor="#00FFD9"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <TextView
        android:id="@+id/textView"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="354dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:rotationX="6"
        android:shadowColor="#38FBE4"
        android:text="@string/calculator"
        android:textColor="#2C4CFB"
        android:textColorHighlight="#C70000"
        android:textColorHint="#A302A1"
        android:textColorLink="#6DFF04"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="409dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:text="@string/line"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="normalCalc"
        android:text="@string/normal_calculator"
        android:textColor="#00FFD9"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="numeralCalc"
        android:text="@string/decimal_to_binary"
        android:textColor="#00FFD9"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="discountCalc"
        android:text="@string/discount_calculator"
        android:textColor="#00FFD9"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="currencyCalc"
        android:text="@string/currency_convertor"
        android:textColor="#00FFD9"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="BMICalc"
        android:text="@string/bmi_calculator"
        android:textColor="#00FFD9"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="257dp"
        android:layout_height="34dp"
        android:text="@string/made_with_by_kartik_kumar"
        android:textColor="#FF04F9"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/normal_calculator"
        android:onClick="normalCalc"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/images" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/decimal_to_binary"
        android:onClick="numeralCalc"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305"
        app:srcCompat="@drawable/img_20221229_015120" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/currency_convertor"
        android:onClick="currencyCalc"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586"
        app:srcCompat="@drawable/img_20221229_021123" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/bmi_calculator"
        android:onClick="BMICalc"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867"
        app:srcCompat="@drawable/img_20221229_020537" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/discount_calculator"
        android:onClick="discountCalc"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446"
        app:srcCompat="@drawable/img_20221229_031033" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:onClick="ScientificCalc"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726"
        app:srcCompat="@drawable/_728264"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>